# UDC-Assignments

./: .gitignore  Makefile  README.md  rational_struct.h
OS/: lab0.1.c  lab0.c
OS/helpcode/: ayudaP2.c
OS/shell/: Makefile  basic_commands.c  bugs.todo.md  command_processor.c  dynamiclist.c  dynamiclist.h  error_msgs.c  error_msgs.h  file_commands.c  file_commands.h  help.c  help.h  help_pages.c  history_commands.c  history_commands.h  instructions.c  instructions.h  list.c  list.h  main.c  problemLog.todo.md  shell-v0.c  tasks.todo.md  types.h  utils.c  utils.h  valid_commands.c  valid_commands.h
algorithms/p1/: Makefile  Report_Paula.txt  Report_Siyuan.txt  algorithms_p1_Paula_Siyuan.c  tests.txt
algorithms/p2/: Makefile  Report_Paula.txt  Report_Siyuan.txt  algorithms_p2_Paula_Siyuan.c  tasks.todo.md
algorithms/p3/: Makefile  Report_Paula.txt  Report_Siyuan.txt  algorithms_p3_Paula_Siyuan.c  heap.c  heap.h  test.c  test.h  time.c  time.h
algorithms/p4/: Report_Paula.txt  Report_Siyuan.txt  algorithms_p4_Paula_Siyuan.c
practice0/: main.c  rational_pointer.c  rational_pointer.h  rational_struct.c
practice1/: CMakeLists.txt  dynamic_list.c  dynamic_list.h  main.c  mainFunctions.c  mainFunctions.h  static_list.c  static_list.h  test.c
practice1/material/: CMakeLists.txt
practice2/: CMakeLists.txt  Createnew.c  jury_list.c  jury_list.h  main.c  participant_list.c  participant_list.h  siyuan.h
proII/practice0/: CMakeLists.txt  (+2 more)
proII/practice1/: CMakeLists.txt  main.c  static_list.h  test.c
proII/practice1/material/script/: static_list.c  static_list.h
(+66 files in other folders)
